--- a/Noad.conf
+++ b/Noad.conf
@@ -1,3 +1,3 @@
 # 小程序
 # 易捷加油
-^https:\/\/ocrifs\.ejoy\.sinopec\.com\/advertitfs\/advert\/findAdvertInfo url reject
+^https:\/\/ocrifs\.ejoy\.sinopec\.com\/advertitfs\/advert\/findAdvertInfo url reject-dict
