--- a/Noad.conf
+++ b/Noad.conf
@@ -1,3 +1,63 @@
+# A
+# 爱回收
+^https?:\/\/gw.aihuishou.com\/app-portal\/home\/getadvertisement url reject
+# B
+# 贝壳找房
+# C
+^https?:\/\/apps\.api\.ke\.com\/config\/config\/(bootpage|getactivityconfig) url reject
+# D
+# 滴滴出行
+^https?://res\.xiaojukeji\.com\/resapi\/activity\/mget url reject
+^https?:\/\/res\.xiaojukeji\.com\/resapi\/activity\/get(Ruled|Preload|PasMultiNotices) url reject
+# E
+# F
+# G
+# H
+# I
+# J
+# 京东
+^https?:\/\/api\.m\.jd\.com\/client\.action\?functionId=(start|queryMaterialAdverts) url reject-200
+^https?:\/\/(bdsp-x|dsp-x)\.jd\.com\/adx\/ url reject-200
+^https?:\/\/api\.m\.jd\.com\/client\.action\?functionId=(hotWords|hotSearchTerms) url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/jd_json.js
+# 京东金融
+^https?:\/\/ms\.jr\.jd\.com\/gw\/generic\/aladdin\/(new)?na\/m\/getLoadingPicture url reject-200
+# K
+# 肯德基
+^https?:\/\/res.kfc.com.cn\/advertisement\/ url reject
+# L
+# M
+# 马蜂窝
+^https://mapi.mafengwo.cn\/ad\/get_launch_ad_list\/v2 url reject
+# 美团
+^https?:\/\/peisongapi\.meituan\.com\/client\/getInitiateImage url reject
+^https?:\/\/img\.meituan\.net\/(adunion|display|midas)\/\w+\.(gif|jpg|jpg\.webp)$ url reject
+^https?:\/\/(s3plus|flowplus)\.meituan\.net\/v\d\/\w+\/linglong\/\w+\.(gif|jpg|mp4) url reject
+^https?:\/\/p\d\.meituan\.net\/(bizad|wmbanner)\/\w+\.jpg url reject
+^https?:\/\/p\d\.meituan\.net\/movie\/\w+\.jpg\?may_covertWebp url reject
+# N
+# O
+# P
+# Q
+# R
+# S
+# T
+# 淘票票
+^https?:\/\/acs\.m\.taobao\.com\/gw\/mtop\.film\.mtopadvertiseapi\.queryadvertise\/ url reject
+# 同程旅行
+^https?:\/\/tcmobileapi\.17usoft\.com\/appindexnew\/index\/getappindexconfig url reject
+# Topwidget
+https://top-widgets-api.xiaozujian.com/api/ad/config url reject
+# U
+# V
+# W
+# 网易大神
+^https?:\/\/god\.gameyw\.netease\.com\/v\d\/ad\/serving\/app-start url reject
+# 网易云音乐
+^https?:\/\/interface(\d)?.music.163.com\/eapi\/ad\/ url reject
+# X
+# W
+# Y
+# Z
 # 小程序
 # 易捷加油
 ^https:\/\/ocrifs\.ejoy\.sinopec\.com\/advertitfs\/advert\/findAdvertInfo url reject
