--- a/Noad.conf
+++ b/Noad.conf
@@ -54,10 +54,16 @@ https://top-widgets-api.xiaozujian.com/api/ad/config url reject
 ^https?:\/\/god\.gameyw\.netease\.com\/v\d\/ad\/serving\/app-start url reject
 # 网易云音乐
 ^https?:\/\/interface(\d)?.music.163.com\/eapi\/ad\/ url reject
+# 网易考拉
+^https?:\/\/sp\.kaola\.com\/api\/openad url reject
+^https?:\/\/gw\.kaola\.com\/gw\/dgmobile\/newOpenAd url reject
 # X
+# 携程
+^https:\/\/ma-adx\.ctrip\.com\/_ma\.gif url reject
+^https:\/\/mbd\.baidu\.com\/newspage\/api\/getmobads\?page\=landingshare url reject
 # W
 # Y
 # Z
 # 小程序
 # 易捷加油
-^https:\/\/ocrifs\.ejoy\.sinopec\.com\/advertitfs\/advert\/findAdvertInfo url reject
+^https:\/\/ocrifs\.ejoy\.sinopec\.com\/advertitfs\/advert\/findAdvertInfo url reject-dict
