--- a/Noad.conf
+++ b/Noad.conf
@@ -15,25 +15,30 @@
 
 # --E--
 
-# ---F---
+# --F--
 # 飞猪
 ^https:\/\/acs\.m\.taobao\.com\/gw\/mtop\.fliggy\.crm\.screen\.allresource url reject
 
-# G
-# H
-# I
-# J
+# --G--
+
+# --H--
+
+# --I--
+
+# --J--
 # 京东
 ^https?:\/\/api\.m\.jd\.com\/client\.action\?functionId=(start|queryMaterialAdverts) url reject-200
 ^https?:\/\/(bdsp-x|dsp-x)\.jd\.com\/adx\/ url reject-200
 ^https?:\/\/api\.m\.jd\.com\/client\.action\?functionId=(hotWords|hotSearchTerms) url script-response-body https://github.com/ddgksf2013/Scripts/raw/master/jd_json.js
 # 京东金融
 ^https?:\/\/ms\.jr\.jd\.com\/gw\/generic\/aladdin\/(new)?na\/m\/getLoadingPicture url reject-200
-# K
+
+# --K--
 # 肯德基
 ^https?:\/\/res.kfc.com.cn\/advertisement\/ url reject
-# L
-# M
+
+# --L--
+# --M--
 # 马蜂窝
 ^https://mapi.mafengwo.cn\/ad\/get_launch_ad_list\/v2 url reject
 # 美团
@@ -42,40 +47,44 @@
 ^https?:\/\/(s3plus|flowplus)\.meituan\.net\/v\d\/\w+\/linglong\/\w+\.(gif|jpg|mp4) url reject
 ^https?:\/\/p\d\.meituan\.net\/(bizad|wmbanner)\/\w+\.jpg url reject
 ^https?:\/\/p\d\.meituan\.net\/movie\/\w+\.jpg\?may_covertWebp url reject
-# N
-# O
-# P
-# Q
-# R
-# S
-# T
+
+# --N--
+# --O--
+# --P--
+# --Q--
+# --R--
+# --S--
+# --T--
 # 淘票票
 ^https?:\/\/acs\.m\.taobao\.com\/gw\/mtop\.film\.mtopadvertiseapi\.queryadvertise\/ url reject
 # 同程旅行
 ^https?:\/\/tcmobileapi\.17usoft\.com\/appindexnew\/index\/getappindexconfig url reject
 # Topwidget
 https://top-widgets-api.xiaozujian.com/api/ad/config url reject
-# U
-# V
-# W
+
+# --U--
+# --V--
+# --W--
 # 网易大神
 ^https?:\/\/god\.gameyw\.netease\.com\/v\d\/ad\/serving\/app-start url reject
 # 网易云音乐
 ^https?:\/\/interface(\d)?.music.163.com\/eapi\/ad\/ url reject
 # 网易考拉
 ^https?:\/\/sp\.kaola\.com\/api\/openad url reject
-^https?:\/\/gw\.kaola\.com\/gw\/dgmobile\/newOpenAd url reject
-# X
+^https?:\/\/gw\.kaola\.com\/gw\/dgmobile\/newOpenAd url reject-
+# --X--
 # 携程
 ^https:\/\/ma-adx\.ctrip\.com\/_ma\.gif url reject
 ^https:\/\/mbd\.baidu\.com\/newspage\/api\/getmobads\?page\=landingshare url reject
 # 小米有品
 ^https?:\/\/shopapi\.io\.mi\.com\/mtop\/mf\/resource\/homePage\/pageConfig url reject
-# W
-# Y
+
+# --W--
+# --Y--
 # 一淘
 ^https?:\/\/acs\.m\.taobao\.com\/gw\/mtop\.etao\.noah\.query.*etao_splash url reject
-# Z
+
+# --Z--
 # 掌上生活
 ^https?:\/\/mlife\.cmbchina\.com\/ClientFaceService\/api\/mlife\.clientface\.clientservice\.api\.advertiseService\/preCacheAdvertiseSec url reject
 # 中国移动
@@ -84,6 +93,7 @@ https://top-widgets-api.xiaozujian.com/api/ad/config url reject
 # 中国联通
 ^https?:\/\/m\.client\.10010\.com\/mobileService\/(activity|customer)\/(accountListData|get_client_adv|get_startadv) url reject
 ^https?:\/\/m\.client\.10010\.com\/uniAdmsInterface\/(getHomePageAd|getWelcomeAd) url reject
-# 小程序
+
+# --小程序--
 # 易捷加油
 ^https:\/\/ocrifs\.ejoy\.sinopec\.com\/advertitfs\/advert\/findAdvertInfo url reject-dict
