--- a/Noad.conf
+++ b/Noad.conf
@@ -70,7 +70,7 @@ https://top-widgets-api.xiaozujian.com/api/ad/config url reject
 ^https?:\/\/interface(\d)?.music.163.com\/eapi\/ad\/ url reject
 # 网易考拉
 ^https?:\/\/sp\.kaola\.com\/api\/openad url reject
-^https?:\/\/gw\.kaola\.com\/gw\/dgmobile\/newOpenAd url reject-
+^https?:\/\/gw\.kaola\.com\/gw\/dgmobile\/newOpenAd url reject
 # --X--
 # 携程
 ^https:\/\/ma-adx\.ctrip\.com\/_ma\.gif url reject
