--- a/Noad.conf
+++ b/Noad.conf
@@ -10,8 +10,10 @@
 
 # --D--
 # 滴滴出行
-^https?://res\.xiaojukeji\.com\/resapi\/activity\/mget url reject
+^https?:\/\/res\.xiaojukeji\.com\/resapi\/activity\/mget url reject
 ^https?:\/\/res\.xiaojukeji\.com\/resapi\/activity\/get(Ruled|Preload|PasMultiNotices) url reject
+# 叮咚买菜
+^https:\/\/maicai\.api\.ddxq\.mobi\/advert\/getAd\?ad_id url reject-dict
 
 # --E--
 
